# etlportfolio

./: .gitignore  README.md  hatch_build.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
etlportfolio/: data.py  portfolio.py
etlportfolio/optimized/: risk_criteria.c  risk_criteria.pyi  risk_criteria.pyx
scripts/: bump_version.sh
tests/: test.py  test_data.py  test_portfolio.py
