[build-system]
requires = ["hatchling", "Cython>=3.0", "numpy"]
build-backend = "hatchling.build"

[project]
name = "etlportfolio"
version = "2.0.1"
authors = [
  { name="Jack Tobin", email="tobjack330@gmail.com" },
]
description = "Expected tail loss portfolio optimisation in python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]
dependencies = [
  "yfinance",
  "pandas",
  "numpy",
  "seaborn",
  "matplotlib",
  "scipy",
]

[project.urls]
"Homepage" = "https://github.com/jamesjtobin/etlportfolio"
"Bug Tracker" = "https://github.com/jamesjtobin/etlportfolio/issues"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
only-include = ["etlportfolio"]
